nettoyage version mobile + navbar fixe

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -176,8 +176,15 @@ table {
   }
 }
 
-#navbar {
-  @media (min-width: $breakpointMobile) {
+#mobile-navbar {
     background-color: $grey;
-  }
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1;
+    border-bottom: 12px solid $white;
+}
+
+#mobile-wines-content {
+  margin-top: 150px;
 }
